Changes for 1.8.19rc1


Changes for 1.8.18

1.8.18rc1 was released as 1.8.18 without any changes

Changes for 1.8.18rc1

A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in page filtering; thanks to Bernhard Schildendorfer from SEC Consult for the report (Eduard, Pavels)
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in dashboard favourite managing; thanks to Lincoln, a member of Corelan Team, for the report (Eduard, Pavels)
.......P.. [ZBX-6249] fixed data loss in proxy "Data sender" process caused by unfinished transactions; thanks to MATSUDA Daiki for patch (Andris)
..F....... [ZBX-6830] fixed dynamic item checkbox in Configuration > Screens (Ivo)
........S. [ZBX-5924] fixed curl verify host option setting in ez texting (wiper)

Changes for 1.8.17

1.8.17rc1 was released as 1.8.17 without any changes

Changes for 1.8.17rc1

A......... [ZBX-6582] fixed that {ITEM.VALUE} and {ITEM.LASTVALUE} macro was not truncated in Monitoring > Triggers (Toms)
...G...... [ZBX-6584] fixed possible logrt crash on windows platform when logfile was moved during processing (wiper)
..F....... [ZBX-1129] fixed graph time period in bar reports (Oleg)
..F....... [ZBX-6484] fixed bar report calculation (Oleg)
..F....... [ZBX-1236] added right side y axis support in bar reports (Oleg)
..F....... [ZBX-6474] fixed {ITEM.VALUE} macro expanding in trigger names (Oleg)
...G...PS. [ZBX-6342] fixed LDAP check that caused server crash when LDAP is running but no DIT has been defined (Aleksej)
..F....... [ZBX-6329] fixed form with "0" in trigger expression parser (Eduard)
..F....... [ZBX-6306] fixed frontend layout for latest Google Chrome 25 (Eduard)
..F....... [ZBX-6258] updated Japanese translation; thanks to Kodai Terashima (Richlv)
..F....... [ZBX-6217] fixed inability to use HTML special characters in web scenario password (Toms)
...G...... [ZBX-6057] fixed using of ServerActive option by zabbix_sender (Sasha)