@@ -701,6 +701,45 @@ function utf8RawUrlDecode($source){
 		return $newtriggerid;
 	}
 
+	/**
+	 * Function split trigger expresion by '&' and '|', that all elements from first level would be separated.
+	 *
+	 * @param string $expresion		trigger expresion
+	 *
+	 * @return array
+	 */
+	function splitByFirstLevel($expresion) {
+		$pos = 0;
+		$level = 0;
+
+		while (isset($expresion[$pos])) {
+			switch ($expresion[$pos]) {
+				case '(':
+					++$level;
+					break;
+				case ')':
+					--$level;
+					break;
+				case '&':
+				case '|':
+					if (!$level) {
+						$tmpArr[] = trim(substr($expresion, 0, $pos));
+						$expresion = substr($expresion, $pos + 1);
+						$pos = -1;
+					}
+					break;
+				default:
+					break;
+			}
+			++$pos;
+		}
+
+		if ($expresion) {
+			$tmpArr[] = trim($expresion);
+		}
+
+		return $tmpArr;
+	}
 
 	function construct_expression($itemid,$expressions){
 		$complite_expr='';
@@ -716,8 +755,7 @@ function utf8RawUrlDecode($source){
 		}
 		$functions = array('regexp'=>1,'iregexp'=>1);
 
-//		$ZBX_EREG_EXPESSION_FUNC_FORMAT = '^([[:print:]]*)([&|]{1})(([a-zA-Z_.$]{6,7})(\\(([[:print:]]+){0,1}\\)))([[:print:]]*)$';
-		$ZBX_PREG_EXPESSION_FUNC_FORMAT = '^(['.ZBX_PREG_PRINT.']*)([&|]{1})(([a-zA-Z_.\$]{6,7})(\\((['.ZBX_PREG_PRINT.']+){0,1}\\)))(['.ZBX_PREG_PRINT.']*)$';
+		$ZBX_PREG_EXPESSION_FUNC_FORMAT = '^(['.ZBX_PREG_PRINT.']*)([&|]{1})[(]*(([a-zA-Z_.\$]{6,7})(\\((['.ZBX_PREG_PRINT.']+?){0,1}\\)))(['.ZBX_PREG_PRINT.']*)$';
 
 		$expr_array = array();
 
